# pipecat-flows

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  dev-requirements.txt  env.example  pyproject.toml  pyrightconfig.json
.claude/skills/changelog/: SKILL.md
.claude/skills/update-docs/: SKILL.md  SOURCE_DOC_MAPPING.md
.github/workflows/: format.yaml  publish-pypi.yml  publish-test.yml  test.yml  update-docs.yml
changelog/: 244.fixed.md  247.changed.md  263.changed.md  263.deprecated.2.md  263.deprecated.3.md  263.deprecated.md  263.fixed.md
editor/examples/: emotional_states.json  good_bad_cop.json  helpdesk.json
editor/js/utils/: export.js
examples/: README.md  food_ordering.py  food_ordering_direct_functions.py  food_ordering_global_functions.py  insurance_quote.py  llm_switching.py  patient_intake.py  podcast_interview.py  prototype-llm-failover.py  restaurant_reservation.py  restaurant_reservation_direct_functions.py  runner.py  utils.py  warm_transfer.py
examples/dynamic/: food_ordering.py  food_ordering_direct_functions.py  helpdesk.py  insurance_anthropic.py  insurance_aws_bedrock.py  insurance_gemini.py  insurance_openai.py  insurance_quote.py  llm_switching.py  minimal_repro.py  patient_intake.py  pre_action.py  restaurant_reservation.py  restaurant_reservation_direct_functions.py  test.py  warm_transfer.py
examples/dynamic/hold_music/: README.md
examples/food_ordering_static/: food_ordering_static.json  food_ordering_static.py  json_flow_config.py
examples/quickstart/: README.md  hello_world.py  requirements.txt  run.py
examples/static/: food_ordering.py  food_ordering_basic.py  food_ordering_direct_functions.py  food_ordering_state.py  helpdesk.py  movie_explorer_anthropic.py  movie_explorer_gemini.py  movie_explorer_openai.py  patient_intake_anthropic.py  patient_intake_aws_bedrock.py  patient_intake_gemini.py  patient_intake_openai.py  travel_planner.py  warm_transfer.py
js/editor/: toolbar.js
scripts/: fix-ruff-and-typecheck.sh  fix-ruff.sh
src/pipecat_flows/: __init__.py  actions.py  adapters.py  manager.py  realtime_manager.py  types.py
tests/: test_adapters.py  test_context_strategies.py  test_flows_direct_functions.py  test_manager.py
